--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About Handmadeby JJ</title>
     <script src="https://kit.fontawesome.com/53b5963f66.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/about.css">
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -26,7 +27,9 @@
             </li>
         </ul>
     </nav>   
-    
+    <section class="skillsbox">
+        <p class="skills">I cut all of my signs by hand, paint and  </p>
+    </section>   
     
 </body>
 </html>
