added video and sound

--- a/about.html
+++ b/about.html
@@ -28,7 +28,11 @@
         </ul>
     </nav>   
     <section class="skillsbox">
-        <p class="skills">I cut all of my signs by hand, paint and  </p>
+        <p class="skills">I cut all of my signs by hand. All signs can be customized to say what you would like.  </p>
+    </section>
+    <section class="videobox">
+        <p class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/_575gJfYhTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </p>    
     </section>   
     
 </body>
