--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
      rel="stylesheet">
 </head>
 <body>
+    <p><audio controls autoplay>
+        <source src="../final-project/img/bensound-goinghigher.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio><br>
+       Music by Bensound.com</p>
     <header  style="text-align: center;"><img src="../final-project/img/HANDMADE.png" width="1200" height="300" alt="">
     </header>
     <nav class="longbox"> 
