added footer to all pages

--- a/about.html
+++ b/about.html
@@ -34,6 +34,30 @@
         <p class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/_575gJfYhTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>    
     </section>   
+
+    <footer class="longboxfoot">
+        <ul>
+            <li class="footlist">Nationwide Shipping available</li>
+            <li class="footlist"><a href="contact.html">Contact Us</a></li>
+            <li class="footlist">Phone: (555) 555-5555</li>
+        </ul>
+        <ul>    
+            <li class="footlist column2">To order please message on Instagram!</li>
+            <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
+        </ul>
+        <ul>    
+            <li><a href="https://www.instagram.com/handmadeby_jj/">
+                <i class="fa-brands fa-instagram-square"></i>
+                </a>
+            </li>    
+        </ul>
+            <!-- <p style="text-align: right; padding-right: 25px;">   
+            <a href="https://www.instagram.com/handmadeby_jj/">
+                <i class="fa-brands fa-instagram-square"></i>
+            </a>    
+        </p> -->
+    </footer>
+
     
 </body>
 </html>
