--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,31 @@
             <input type="submit" value="Submit">
         </form>
         </div>
-    </div>    
+    </div>  
+
+        <footer class="longboxfoot">
+        <ul>
+            <li class="footlist">Nationwide Shipping available</li>
+            <li class="footlist"><a href="contact.html">Contact Us</a></li>
+            <li class="footlist">Phone: (555) 555-5555</li>
+        </ul>
+        <ul>    
+            <li class="footlist column2">To order please message on Instagram!</li>
+            <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
+        </ul>
+        <ul>    
+            <li><a href="https://www.instagram.com/handmadeby_jj/">
+                <i class="fa-brands fa-instagram-square"></i>
+                </a>
+            </li>    
+        </ul>
+            <!-- <p style="text-align: right; padding-right: 25px;">   
+            <a href="https://www.instagram.com/handmadeby_jj/">
+                <i class="fa-brands fa-instagram-square"></i>
+            </a>    
+        </p> -->
+    </footer>
+
     
 </body>
 </html>
