removed auto play

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      rel="stylesheet">
 </head>
 <body>
-    <p><audio controls autoplay>
+    <p><audio controls>
         <source src="../final-project/img/bensound-goinghigher.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio><br>
