added about section and more products

--- a/about.html
+++ b/about.html
@@ -28,7 +28,11 @@
         </ul>
     </nav>   
     <section class="skillsbox">
-        <p class="skills">I cut all of my signs by hand. All signs can be customized to say what you would like.  </p>
+        <p class="skills">Hello! My Name is Janessa & I am the face behind Handmade by JJ.<br>
+            Everything in my shop is hand cut and painted by me. Every wood sign is painted with outdoor paint which makes 
+            them the perfect addition to either the inside or the outside of your home!<br><br> Any sign can be completely customized, from the stain/paint color of the round, the color or font for the words,
+             to the saying or design! Just shoot me a DM on Instagram to start customizing your sign today!
+           <br><br> As my love for power tools has grown, I plan to release some 3-D wood signs in the near future. Please follow my journey over on Instagram (@handmadeby_jj)!</p>
     </section>
     <section class="videobox">
         <p class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/_575gJfYhTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
