--- a/index.html
+++ b/index.html
@@ -32,37 +32,65 @@
         </ul>
     </nav>
     <section class="shortbox floatleft">
-        <img class="hanger" src="../final-project/img/IMG-5144.JPG" alt="">
+        <img class="hanger" src="../final-project/img/IMG-5144.JPG" alt="welcome">
         <p class="hdesc">Spring Welcome</p>
     </section>
     <section class="shortbox floatleft">
-        <img class="hanger" src="img/IMG-5142.JPG" alt="">
+        <img class="hanger" src="img/IMG-5142.JPG" alt="hey">
         <p class="hdesc">Oh Hey</p>
     </section>
     <section class="shortbox floatleft">
-        <img class="hanger" src="img/IMG-5137.JPG" alt="">
+        <img class="hanger" src="img/IMG-5137.JPG" alt="home">
         <p class="hdesc">Bless this Home</p>
     </section>  
     <section class="shortbox floatleft">
-        <img class="hanger" src="img/IMG-5136.JPG" alt="">
+        <img class="hanger" src="img/IMG-5136.JPG" alt="spring">
         <p class="hdesc">Hello Spring</p>
     </section> 
     <section class="shortbox floatleft">
-        <img class="hanger" src="img/IMG-3003.JPG" alt="">
+        <img class="hanger" src="img/IMG-3003.JPG" alt="welcome">
         <p class="hdesc">Welcome</p>
     </section>
     <section class="shortbox floatleft">
-        <img class="hanger" src="img/IMG-1003.JPG" alt="">
+        <img class="hanger" src="img/IMG-1003.JPG" alt="you and me">
         <p class="hdesc">You &amp; Me </p>
     </section>     
     <section class="shortbox floatleft">
-        <img class="hanger" src="img/IMG-1001.JPG" alt="">
+        <img class="hanger" src="img/IMG-1001.JPG" alt="wedding">
         <p class="hdesc">Custom<br> Wedding<br>Sign<br><br><small>(example <br>is 2' X 4')</small></p>
     </section> 
     <section class="shortbox floatleft">
-        <img class="hanger" src="img/customlarge.jpg" alt="">
+        <img class="hanger" src="img/customlarge.jpg" alt="Inspirational">
         <p class="hdesc">Custom<br> Inspirational<br>Sign</p>
     </section>    
+    <section class="shortbox floatleft">
+        <img class="hanger" src="../final-project/img/IMG-3591.JPG" alt="santa">
+        <p class="hdesc">Santa Claus<br> Is coming<br>to town</p>
+    </section>    
+    <section class="shortbox floatleft">
+        <img class="hanger" src="../final-project/img/IMG-3637.JPG" alt="outside">
+        <p class="hdesc">Baby<br> its cold<br>outside</p>
+    </section>    
+    <section class="shortbox floatleft">
+        <img class="hanger" src="../final-project/img/IMG-3639.JPG" alt="wonderland">
+        <p class="hdesc">Winter<br>Wonderland</p>
+    </section>    
+    <section class="shortbox floatleft">
+        <img class="hanger" src="../final-project/img/IMG-4434.jpg" alt="wonderland2">
+        <p class="hdesc">Winter<br>Wonderland</p>
+    </section>    
+    <section class="shortbox floatleft">
+        <img class="hanger" src="../final-project/img/IMG-4782.JPG" alt="hey love">
+        <p class="hdesc">Hey<br>Love</p>
+    </section>    
+    <section class="shortbox floatleft">
+        <img class="hanger" src="../final-project/img/IMG-4788.jpg" alt="Valentine">
+        <p class="hdesc">Hello<br>Valentine</p>
+    </section>  <section class="shortbox floatleft">
+        <img class="hanger" src="../final-project/img/IMG-4789.jpg" alt="XO">
+        <p class="hdesc">XO</p>
+    </section> 
+
 
     
     
