--- a/index.html
+++ b/index.html
@@ -76,8 +76,12 @@
         <p class="hdesc">Winter<br>Wonderland</p>
     </section>    
     <section class="shortbox floatleft">
-        <img class="hanger" src="../final-project/img/IMG-4434.jpg" alt="wonderland2">
-        <p class="hdesc">Winter<br>Wonderland</p>
+        <img class="hanger" src="../final-project/img/IMG-4434.jpg" alt="forest2">
+        <p class="hdesc">Forest</p>
+    </section>
+    <section class="shortbox floatleft">
+        <img class="hanger" src="../final-project/img/IMG-4433.jpg" alt="forest">
+        <p class="hdesc">Forest</p>
     </section>    
     <section class="shortbox floatleft">
         <img class="hanger" src="../final-project/img/IMG-4782.JPG" alt="hey love">
@@ -87,7 +91,7 @@
         <img class="hanger" src="../final-project/img/IMG-4788.jpg" alt="Valentine">
         <p class="hdesc">Hello<br>Valentine</p>
     </section>  <section class="shortbox floatleft">
-        <img class="hanger" src="../final-project/img/IMG-4789.jpg" alt="XO">
+        <img class="hanger" src="../final-project/img/IMG-4789.JPG" alt="XO">
         <p class="hdesc">XO</p>
     </section> 
 
