--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
         </ul>
     </nav>   
     <section class="skillsbox">
-        <p class="skills">Hello! My Name is Janessa & I am the face behind Handmade by JJ.<br>
+        <p style="text-align: center;"><img class="jj" src="../final-project/img/jj.jpg" alt="jj"></p>
+        <p class="skills">
+            Hello! My Name is Janessa & I am the face behind Handmade by JJ.<br>
             Everything in my shop is hand cut and painted by me. Every wood sign is painted with outdoor paint which makes 
             them the perfect addition to either the inside or the outside of your home!<br><br> Any sign can be completely customized, from the stain/paint color of the round, the color or font for the words,
              to the saying or design! Just shoot me a DM on Instagram to start customizing your sign today!
