fixed img and footer

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p class="hdesc">Forest</p>
     </section>
     <section class="shortbox floatleft">
-        <img class="hanger" src="../final-project/img/IMG-4433.jpg" alt="forest">
+        <img class="hanger" src="../final-project/img/IMG-4433.JPG" alt="forest">
         <p class="hdesc">Forest</p>
     </section>    
     <section class="shortbox floatleft">
@@ -99,21 +99,30 @@
     
     
     <footer class="longboxfoot">
-        <ul>
-            <li class="footlist">Nationwide Shipping available</li>
-            <li class="footlist"><a href="contact.html">Contact Us</a></li>
-            <li class="footlist">Phone: (555) 555-5555</li>
-        </ul>
-        <ul>    
-            <li class="footlist column2">To order please message on Instagram!</li>
-            <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
-        </ul>
-        <ul>    
-            <li><a href="https://www.instagram.com/handmadeby_jj/">
-                <i class="fa-brands fa-instagram-square"></i>
-                </a>
-            </li>    
-        </ul>
+        <div class="footbox">
+            <ul>
+                <li class="footlist">Nationwide Shipping available</li>
+                <li class="footlist"><a href="contact.html">Contact Us</a></li>
+                <li class="footlist">Phone: (555) 555-5555</li>
+            </ul>
+        </div>
+        <div class="footbox">
+            <ul>    
+                <li class="footlist column2">To order please message on Instagram!</li>
+                <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
+            </ul>
+        </div>
+        <div class="footbox">
+            <ul>    
+                <li><a href="https://www.instagram.com/handmadeby_jj/">
+                    <i class="fa-brands fa-instagram-square igjj"></i>
+                    </a>
+                </li>    
+                <li class="footlist"><img src="../final-project/img/hbjjlogo.png" alt="jj logo" height="150px" width="100vw">
+                </li>
+            </ul>
+        </div>
+
             <!-- <p style="text-align: right; padding-right: 25px;">   
             <a href="https://www.instagram.com/handmadeby_jj/">
                 <i class="fa-brands fa-instagram-square"></i>
