--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     </header>
     
     <nav class="longbox"> 
-        <ul>
+        <ul class="navul">
             <li>
                 <a href="index.html">Home</a>
             </li>
@@ -26,7 +26,7 @@
                 <a href="contact.html">Contact</a>
             </li>
         </ul>
-    </nav>   
+    </nav>
     <section class="skillsbox">
         <p style="text-align: center;"><img class="jj" src="../final-project/img/jj.jpg" alt="jj"></p>
         <p class="skills">
@@ -42,26 +42,28 @@
     </section>   
 
     <footer class="longboxfoot">
-        <ul>
-            <li class="footlist">Nationwide Shipping available</li>
-            <li class="footlist"><a href="contact.html">Contact Us</a></li>
-            <li class="footlist">Phone: (555) 555-5555</li>
-        </ul>
-        <ul>    
-            <li class="footlist column2">To order please message on Instagram!</li>
-            <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
-        </ul>
-        <ul>    
-            <li><a href="https://www.instagram.com/handmadeby_jj/">
-                <i class="fa-brands fa-instagram-square"></i>
-                </a>
-            </li>    
-        </ul>
-            <!-- <p style="text-align: right; padding-right: 25px;">   
-            <a href="https://www.instagram.com/handmadeby_jj/">
-                <i class="fa-brands fa-instagram-square"></i>
-            </a>    
-        </p> -->
+        <div class="footbox floatleft">
+            <ul>
+                <li class="footlist">Nationwide Shipping available</li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li class="footlist">Phone: (555) 555-5555</li>
+            </ul>
+        </div>
+        <div class="footbox floatleft">
+            <ul>    
+                <li class="footlist column2">To order please message on Instagram!</li>
+                <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
+            </ul>
+        </div>
+        <div class="footbox icons floatleft">
+                <a href="https://www.instagram.com/handmadeby_jj/">
+                    <i class="fa-brands fa-instagram-square igjj"></i>
+                    </a>
+        </div>            
+        <div class="footbox1 icons floatleft"> 
+                <img class="jj" src="../final-project/img/hbjjlogo.png" alt="jj logo">
+        </div>
+
     </footer>
 
     
