--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     </header>
     
     <nav class="longbox"> 
-        <ul>
+        <ul class="navul">
             <li>
                 <a href="index.html">Home</a>
             </li>
@@ -29,7 +29,7 @@
                 <a href="contact.html">Contact</a>
             </li>
         </ul>
-    </nav>   
+    </nav>  
    
     <div>
         <h3>Contact Form</h3>
@@ -52,28 +52,33 @@
         </form>
         </div>
     </div>  
+    <div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45860.596147778764!2d-116.96152458727113!3d44.07742431377215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54af85dbf57fccaf%3A0x958c8f26c2c8b581!2sPayette%2C%20ID%2083661!5e0!3m2!1sen!2sus!4v1645062054599!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>  
 
-        <footer class="longboxfoot">
-        <ul>
-            <li class="footlist">Nationwide Shipping available</li>
-            <li class="footlist"><a href="contact.html">Contact Us</a></li>
-            <li class="footlist">Phone: (555) 555-5555</li>
-        </ul>
-        <ul>    
-            <li class="footlist column2">To order please message on Instagram!</li>
-            <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
-        </ul>
-        <ul>    
-            <li><a href="https://www.instagram.com/handmadeby_jj/">
-                <i class="fa-brands fa-instagram-square"></i>
-                </a>
-            </li>    
-        </ul>
-            <!-- <p style="text-align: right; padding-right: 25px;">   
-            <a href="https://www.instagram.com/handmadeby_jj/">
-                <i class="fa-brands fa-instagram-square"></i>
-            </a>    
-        </p> -->
+    <footer class="longboxfoot">
+        <div class="footbox floatleft">
+            <ul>
+                <li class="footlist">Nationwide Shipping available</li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li class="footlist">Phone: (555) 555-5555</li>
+            </ul>
+        </div>
+        <div class="footbox floatleft">
+            <ul>    
+                <li class="footlist column2">To order please message on Instagram!</li>
+                <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
+            </ul>
+        </div>
+        <div class="footbox icons floatleft">
+                <a href="https://www.instagram.com/handmadeby_jj/">
+                    <i class="fa-brands fa-instagram-square igjj"></i>
+                    </a>
+        </div>            
+        <div class="footbox1 icons floatleft"> 
+                <img class="jj" src="../final-project/img/hbjjlogo.png" alt="jj logo">
+        </div>
+
     </footer>
 
     
