--- a/index.html
+++ b/index.html
@@ -99,35 +99,28 @@
     
     
     <footer class="longboxfoot">
-        <div class="footbox">
+        <div class="footbox floatleft">
             <ul>
                 <li class="footlist">Nationwide Shipping available</li>
-                <li class="footlist"><a href="contact.html">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
                 <li class="footlist">Phone: (555) 555-5555</li>
             </ul>
         </div>
-        <div class="footbox">
+        <div class="footbox floatleft">
             <ul>    
                 <li class="footlist column2">To order please message on Instagram!</li>
                 <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
             </ul>
         </div>
-        <div class="footbox">
-            <ul>    
-                <li><a href="https://www.instagram.com/handmadeby_jj/">
+        <div class="footbox icons floatleft">
+                <a href="https://www.instagram.com/handmadeby_jj/">
                     <i class="fa-brands fa-instagram-square igjj"></i>
                     </a>
-                </li>    
-                <li class="footlist"><img src="../final-project/img/hbjjlogo.png" alt="jj logo" height="150px" width="100vw">
-                </li>
-            </ul>
+        </div>            
+        <div class="footboxl icons floatleft"> 
+                <img class="jj" src="../final-project/img/hbjjlogo.png" alt="jj logo">
         </div>
 
-            <!-- <p style="text-align: right; padding-right: 25px;">   
-            <a href="https://www.instagram.com/handmadeby_jj/">
-                <i class="fa-brands fa-instagram-square"></i>
-            </a>    
-        </p> -->
     </footer>
 
 
