--- a/index.html
+++ b/index.html
@@ -102,13 +102,15 @@
         <div class="footbox floatleft">
             <ul>
                 <li class="footlist">Nationwide Shipping available</li>
-                <li><a href="contact.html">Contact Us</a></li>
                 <li class="footlist">Phone: (555) 555-5555</li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li></li><a href="index.html">Home</a></li>
             </ul>
         </div>
         <div class="footbox floatleft">
             <ul>    
                 <li class="footlist column2">To order please message on Instagram!</li>
+                <li class="footlist"></li><a href="about.html">About</a></li>
                 <li class="footlist">Copyright <i class="fa-regular fa-copyright"></i> 2022</li>
             </ul>
         </div>
